[tool.poetry]
name = "peacebot"
version = "0.1.0"
description = "A shitty discord bot for my discord server"
authors = ["Samrid Pandit <samrid.pandit@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
